# default_project

flutter/: .env.dev  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/kotlin/com/modu/base_app/: MainActivity.kt
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
jupyter-nootbook/: exploration1.ipynb
server/: pyproject.toml  server_fastapi_image_model.py
